# LLM_GATEWAY

./: README.md  pyproject.toml
gateway/: evaluate.py  main.py  models.py  schemas.py
gateway/static/: index.html
