[project]
name = "gateway"
version = "0.1.0"
description = "LLM gateway"
authors = [
    {name = "bincy-narath_aplayer",email = "bincy.narath@achievers.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "google-genai (>=1.15.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "huggingface-hub (>=0.31.2,<0.32.0)",
    "deepeval (>=2.9.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
